# bnsp-dss-jul-26

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  PANDUAN_KODE.md  README.md  app.py  pyproject.toml  requirements.txt
.claude/: launch.json
.streamlit/: config.toml
models/: demand_model.pkl  metrics.json
ppt/: NARASI_PRESENTASI.md  TransJakarta_Demand_Prediction_BNSP.pptx  build_deck.js  package.json
reports/: feature_importance.csv  model_comparison.csv  review_pemodelan.md  test_predictions.csv
src/: __init__.py  config.py  data_loader.py  features.py  od_analysis.py  preprocessing.py  train_model.py  viz.py
