[project]
name = "transjakarta-demand-prediction"
version = "0.1.0"
description = "Portofolio Data Scientist BNSP - TransJakarta Passenger Analytics & Demand Prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.59.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "plotly>=5.24.0",
    "joblib>=1.4.0",
]

[tool.uv]
package = false
